get review by id functionality and end to end testing done